# usb-descriptor-decoder-rs

./: Cargo.toml
src/: lib.rs
src/contained_parsers/: hid.rs  mod.rs  uvc.rs
src/descriptors/: desc_configuration.rs  desc_device.rs  desc_endpoint.rs  desc_hid.rs  desc_interface.rs  mod.rs  parser.rs  topological_desc.rs
src/descriptors/desc_uvc/: mod.rs  uvc_endpoints.rs  uvc_interfaces.rs
