[package]
name = "usb-descriptor-decoder"
authors = ["dbydd <dbydd@outlook.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A no-std extensible USB Descriptor Decoder, support organize Descriptors as tree structure"
repository = "https://github.com/arceos-usb/usb-descriptor-decoder-rs"
categories = ["embedded","encoding"]
keywords = ["usb","no_std","descriptor"]

[dependencies]
bit_field = "0.10.2"
log = "0.4.22"
num-derive = "0.4.2"
num-traits = {version = "0.2.19",default_features=false}
tock-registers = "0.9.0"
